Validation, hash for password and fixed small bugs (z-index)

--- a/login-form-frontend/src/components/LoginForm/LoginForm.scss
+++ b/login-form-frontend/src/components/LoginForm/LoginForm.scss
@@ -15,7 +15,7 @@
         margin-block: 20px;
     }
 
-    p,
+    p:not(.loginError),
     p a {
         font-size: .8rem;
     }
@@ -31,6 +31,7 @@
         height: 60px;
         background: #ffffff00;
         border-radius: 10px;
+        position: relative;
         outline: none;
         border: 1px solid #c0c0c0;
         padding: 10px;
@@ -70,6 +71,7 @@
         cursor: pointer;
         color: #777777;
         text-align: center;
+        z-index: 2;
     }
 }
 
@@ -94,4 +96,11 @@ input[type="submit"] {
 a {
     text-decoration: none;
     color: rgb(63, 123, 11);
+}
+
+
+.loginError{
+    color: red;
+    font-size: .7rem;
+    text-align: center;
 }
