--- a/login-form-frontend/src/components/RegisterForm/RegisterForm.scss
+++ b/login-form-frontend/src/components/RegisterForm/RegisterForm.scss
@@ -15,7 +15,7 @@
         margin-block: 20px;
     }
 
-    p,
+    p:not(.registerError),
     p a {
         font-size: .8rem;
     }
@@ -29,6 +29,7 @@
     input {
         width: 100%;
         height: 60px;
+        position: relative;
         background: #ffffff00;
         border-radius: 10px;
         outline: none;
@@ -94,4 +95,10 @@ input[type="submit"] {
 a {
     text-decoration: none;
     color: rgb(63, 123, 11);
+}
+
+.registerError{
+    color: red;
+    font-size: .7rem;
+    text-align: center;
 }
